--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
+		"@google/generative-ai": "^0.24.1",
 		"@octokit/rest": "^22.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.5.0",
